# xremap-109-to-my-eucalyn

./: .gitignore  Makefile  README.md  config.py  config.yml  pyproject.toml
myxremap/: converter.py  exceptions.py  keys.py  new_keys.py  new_types.py  types.py
myxremap/common/: exceptions.py
myxremap/key/: __init__.py  key.py  modifiers.py
myxremap/keymap/: __init__.py  keymap.py
