[tool.poetry]
name = "myxremap"
version = "0.1.0"
description = ""
authors = ["Hiroya-W <hyuyukun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
xremap = "^0.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
black = "^22.3.0"

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
